--- a/chrome-extension/src/popup.html
+++ b/chrome-extension/src/popup.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Extension</title>
+  <!-- <title>Happy Extension</title> -->
   <link rel="stylesheet" href="./popup.css">
 </head>
 <body>
   <div class="container">
-  <h1>Zebhri Hour Counter😊</h1>
-  </br>
-    <h1>In-time</h1>  
-    <button id="happyButton">Click Me</button>
-    <p id="message"></p>
+  <h1>Zebhri Hour Counter😊!!!</h1>
+  <h2>Your In-Time: </h2>
+  <h2>Your Break-Time: </h2>
+  <h2>Calculated Out-Time: </h2>
+    <!-- <h1>In-time</h1>   -->
+    <!-- <button id="happyButton">Click Me</button> -->
+    <!-- <button id="fetchUrl">Fetch Url</button>  -->
+
+    <button id="fetchData">Fetch Data</button>
+    <p id="message"></p>  
   </div>
   <script type="module" src="./popup.ts"></script>
 </body>
