--- a/chrome-extension/src/popup.html
+++ b/chrome-extension/src/popup.html
@@ -6,13 +6,15 @@
   <link rel="stylesheet" href="./popup.css">
 </head>
 <body>
+  <button id="editGradient" style="background: none; border: none; cursor: pointer;">
+    <i class="fas fa-pen"></i>
+  </button> 
   <h1 class="title">Zebhri Hour Counter</h1>
   <h2>Clock In-Time: </h2>
   <h2>Break-Time: </h2>
   <h2>Clock-out Time: </h2>
     <button id="fetchData">Refresh</button>
     <img id="statusIcon" src="" alt="Status Icon" width="40" height="40" style="margin-left: 10px;">
-    <p id="message"></p>  
   <script type="module" src="./popup.ts"></script>
 </body>
 </html>
