--- a/chrome-extension/src/popup.html
+++ b/chrome-extension/src/popup.html
@@ -16,11 +16,23 @@
   <div class="content"> 
     <h2>Clock In-Time: </h2>
     <h2>Break-Time: </h2>
-    <h2>Clock-out Time: </h2>
+    <!-- <h2>Clock-out Time: </h2> -->
+    <div class="flip-card" id="outTimeCard">
+  <div class="flip-inner">
+    <div class="flip-front">
+      <h2>Clock Out-Time: <strong id="outTimeValue">--:--</strong></h2>
+    </div>
+    <div class="flip-back">
+      <h2 id="timeLeftLabel">Time Left: --:--</h2>
+    </div>
   </div>
+</div>
+  </div>
+  <div class="footer">
     <button id="fetchData"><i class="fa-solid fa-life-ring"></i>
     </button>
     <img id="statusIcon" src="" alt="Status Icon" width="40" height="40" style="margin-left: 10px;">
+  </div>
   <script type="module" src="./popup.ts"></script>
 </body>
 </html>
